--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: splash
-<!-- author_profile: true -->
+author_profile: true
 ---
 
 <div class="post_text">
@@ -19,7 +19,7 @@ layout: splash
 <p>On this site you can check out my <a href="projects/">side projects</a> and the <a href="blog/">thoughts/tips</a> I&#39;ve had along the way.</p>
 
 <p>I am <a href="https://github.com/nick-zanobini">nick-zanobini</a> on GitHub. You can find my full CV on my
-<a href="https://www.linkedin.com/in/nickzanobini">LinkedIn</a> page or you can [download the PDF]({{ site.url }}/assets/Nick's Résumé.pdf) directly.</p>
+<a href="https://www.linkedin.com/in/nickzanobini">LinkedIn</a> page or you can <a href="({{ site.url }}/assets/Nick's Résumé.pdf)">download the PDF</a> directly.</p>
 
 
 </div>
