--- a/old_index.html
+++ b/old_index.html
@@ -1,5 +1,5 @@
 ---
-layout: splash
+layout: single
 author_profile: true
 ---
 
@@ -13,8 +13,6 @@ author_profile: true
 <p>After getting my Bachelors in Electrical Engineering and playing Division 1 Water Polo, I took a job at Boston Scientific Neuromodulation as an Equipment Engineer, where I am today.</p>
 
 <p>I am always working on two or three projects on the nights and weekends. My goal is as to document them here as I bring them to some temporary form of completion.</p>
-
-<p>One day, all of my past selves will unite to form <a href="https://www.youtube.com/watch?v=tZZv5Z2Iz_s">Voltron</a>.</p>
 
 <p>On this site you can check out my <a href="projects/">side projects</a> and the <a href="blog/">thoughts/tips</a> I&#39;ve had along the way.</p>
 
