--- a/_pages/portfolio-archive.html
+++ b/_pages/portfolio-archive.html
@@ -1,13 +1,12 @@
 ---
 layout: archive
-title: "Projects"
-permalink: /projects/
+title: "Portfolio"
+permalink: /portfolio/
 author_profile: false
 ---
 
 <div class="grid__wrapper">
-  {% for post in site.projects %}
+  {% for post in site.portfolio %}
     {% include archive-single.html type="grid" %}
   {% endfor %}
 </div>
-
